--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
